--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ android:
 
 before_install:
   - echo yes | android update sdk --all --filter build-tools-26 --no-ui --force
-
+  - uname -a
 script:
     - echo "Travis branch is $TRAVIS_BRANCH"
-    - gradlew clean test
+    - ./gradlew clean test
