--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ android:
 before_install:
   - echo yes | android update sdk --all --filter build-tools-26 --no-ui --force
   - uname -a
-  - echo hello
+  - echo helloworld
 script:
     - echo "Travis branch is $TRAVIS_BRANCH"
     - ./gradlew clean test
